@@ -44,6 +44,7 @@ export(resp_var)
 export(rmse)
 export(rse)
 export(se)
+export(se_ybar)
 export(smpsize_lmm)
 export(std_beta)
 export(table_values)
