@@ -70,16 +70,19 @@ smpsize_lmm <- function(eff.size, df.n = NULL, power = .8, sig.level = .05, k, i
 #' @title Design effects for two-level mixed models
 #' @name deff
 #'
-#' @description Compute the design effect for mixed models with two-level design.
+#' @description Compute the design effect (also caled \emph{Variance Inflation Factor})
+#'              for mixed models with two-level design.
 #'
 #' @param n Average number of observations per grouping cluster (i.e. level-2 unit).
 #' @param icc Assumed intraclass correlation coefficient for multilevel-model.
 #'
-#' @return The design effect for the two-level model.
+#' @return The design effect (Variance Inflation Factor) for the two-level model.
 #'
 #' @references \itemize{
+#'              \item Bland JM. 2000. Sample size in guidelines trials. Fam Pract. (17), 17-20.
 #'              \item Hsieh FY, Lavori PW, Cohen HJ, Feussner JR. 2003. An Overview of Variance Inflation Factors for Sample-Size Calculation. Evaluation & the Health Professions 26: 239–257. \doi{10.1177/0163278703255230}
 #'              \item Snijders TAB. 2005. Power and Sample Size in Multilevel Linear Models. In: Everitt BS, Howell DC (Hrsg.). Encyclopedia of Statistics in Behavioral Science. Chichester, UK: John Wiley & Sons, Ltd. \doi{10.1002/0470013192.bsa492}
+#'              \item Thompson DM, Fernald DH, Mold JW. 2012. Intraclass Correlation Coefficients Typical of Cluster-Randomized Studies: Estimates From the Robert Wood Johnson Prescription for Health Projects. The Annals of Family Medicine;10(3):235–40. \doi{10.1370/afm.1347}
 #'             }
 #'
 #' @examples
@@ -87,7 +90,49 @@ smpsize_lmm <- function(eff.size, df.n = NULL, power = .8, sig.level = .05, k, i
 #' # and an assumed intraclass correlation coefficient of 0.05.
 #' deff(n = 30)
 #'
+#' # Design effect for two-level model with 24 cluster groups
+#' # and an assumed intraclass correlation coefficient of 0.2.
+#' deff(n = 24, icc = 0.2)
+#'
 #' @export
 deff <- function(n, icc = 0.05) {
   return(1 + (n - 1) * icc)
+}
+
+
+#' @title Standard error of sample mean for mixed models
+#' @name se_ybar
+#'
+#' @description Compute the standard error for the sample mean for mixed models,
+#'                regarding the extent to which clustering affects the standard errors.
+#'                May be used as part of the multilevel power calculation for cluster sampling
+#'                (see \cite{Gelman and Hill 2007, 447ff}).
+#'
+#' @param x Fitted mixed effects model (\code{\link[lme4]{merMod}}-class).
+#'
+#' @return The standard error of the sample mean of \code{fit}.
+#'
+#' @references Gelman A, Hill J. 2007. Data analysis using regression and multilevel/hierarchical models. Cambridge, New York: Cambridge University Press
+#'
+#' @examples
+#' library(lme4)
+#' fit <- lmer(Reaction ~ 1 + (1 | Subject), sleepstudy)
+#' se_ybar(fit)
+#'
+#' @export
+se_ybar <- function(fit) {
+  # get model icc
+  icc <- icc(fit)
+  # get group variances
+  tau.00 <- unname(attr(icc, "tau.00", exact = T))
+  # total variance
+  tot_var <- sum(tau.00, attr(icc, "sigma_2", exact = T))
+  # get number of groups
+  m.cnt <- unlist(lapply(getME(fit, "flist"), nlevels))
+  # compute standard error of sample mean
+  y.se <- c()
+  for (i in seq_len(length(m.cnt))) {
+    y.se <- c(y.se, sqrt((tot_var / nobs(fit)) * deff(n = m.cnt[i], icc = icc[i])))
+  }
+  y.se
 }
